--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.datasource.url = ${COINPAMP_DB_URL}
+spring.datasource.username = ${COINPAMP_DB_USERNAME}
+spring.datasource.password = ${COINPAMP_DB_PASSWORD}
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 
